<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="button_agenda">Agenda</string>
    <string name="button_next_actions">Próximas ações</string>
    <string name="button_caixa_de_entrada">Caixa de Entrada</string>
    <string name="button_delegados">Delegados</string>
    <string name="button_incubar">Incubar</string>
    <string name="button_outros">Outros</string>


    <string name="app_name">CheckApp</string>
    <string name="action_settings">Configurações</string>
    <string name="title_activity_main_menu">CheckApp</string>
    <string name="title_activity_lista">Lista</string>
    <string name="title_activity_lista_calendar">Lista de Calendário</string>
    <string name="title_activity_other_list">Outras Listas</string>
    <string name="add">Adicionar</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancelar</string>
    <string name="share_using">Compartilhar usando:</string>
    <string name="change_list_select">Selecione uma lista</string>

    <string name="menu_add_google_user">Adicionar conta Google</string>

    <!-- Default Lists -->
    <string name="INBOX">Caixa de Entrada</string>
    <string name="NEXT_ACTIONS">Próximas Ações</string>
    <string name="INCUBATOR">Incubadora</string>
    <string name="MAYBE_LATER">Talvez</string>
    <string name="DELEGATED">Delegados</string>
    <string name="CALENDAR">Calendário</string>


    <!--  DataBase Reference -->

    <string name="dbINBOX">Caixa de Entrada</string>
    <string name="dbNEXT_ACTIONS">Próximas Ações</string>
    <string name="dbINCUBATOR">Incubadora</string>
    <string name="dbMAYBE_LATER">Talvez</string>
    <string name="dbDELEGATED">Delegados</string>
    <string name="dbCALENDAR">Calendário</string>
    <string name="dbOTHER">Outros</string>


</resources>
