<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:text="http://schemas.android.com/apk/res-auto"
    android:gravity="start"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".main.MainMenu">

    <Button
        android:id="@string/dbINCUBATOR"
        android:layout_width="@dimen/button_size_default"
        android:layout_height="@dimen/button_size_default"
        android:layout_above="@string/dbOTHER"
        android:layout_alignParentLeft="true"
        android:text="@string/button_incubar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:tag="@string/INCUBATOR"
        android:layout_marginBottom="29dp"
        android:layout_marginLeft="20dp"
        android:onClick="listar" />

    <Button
        android:id="@string/dbCALENDAR"
        android:layout_width="@dimen/button_size_default"
        android:layout_height="@dimen/button_size_default"
        android:layout_alignParentLeft="true"
        android:text="@string/button_agenda"
        android:layout_alignParentTop="true"
        android:tag="@string/CALENDAR"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="47dp"
        android:onClick="listar"
        android:src="@drawable/ic_action_agenda" />

    <Button
        android:id="@string/dbNEXT_ACTIONS"
        android:tag="@string/NEXT_ACTIONS"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="@dimen/button_size_default"
        android:layout_height="@dimen/button_size_default"
        android:layout_alignParentRight="true"
        android:text="@string/button_next_actions"
        android:layout_alignTop="@string/dbCALENDAR"
        android:layout_marginRight="25dp"
        android:onClick="listar"
       />

    <Button
        android:id="@string/dbMAYBE_LATER"
        android:layout_width="@dimen/button_size_default"
        android:layout_height="@dimen/button_size_default"
        android:layout_alignRight="@string/dbNEXT_ACTIONS"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_alignTop="@string/dbINCUBATOR"
        android:text="Talvez"
        android:tag="@string/MAYBE_LATER"
        android:onClick="listar" />

    <Button
        android:id="@string/dbOTHER"
        android:layout_width="@dimen/button_size_default"
        android:layout_height="@dimen/button_size_default"
        android:layout_alignParentBottom="true"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_centerHorizontal="true"
        android:text="@string/button_outros"
        android:layout_marginBottom="22dp"
        android:onClick="listar"/>

    <Button
        android:id="@string/dbINBOX"
        android:layout_width="@dimen/button_size_default"
        android:layout_height="@dimen/button_size_default"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/button_caixa_de_entrada"
        android:tag="@string/INBOX"
        android:layout_above="@string/dbDELEGATED"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="84dp"
        android:onClick="listar" />

    <Button
        android:id="@string/dbDELEGATED"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="@dimen/button_size_default"
        android:layout_height="@dimen/button_size_default"
        android:layout_alignLeft="@string/dbINBOX"
        android:layout_alignTop="@string/dbINCUBATOR"
        android:text="@string/button_delegados"
        android:onClick="listar"
        android:tag="@string/DELEGATED"

        />

</RelativeLayout>
